@@ -4,6 +4,7 @@
       documentation for properties:
 
           * "default-outside-border"
+          * "inner-border"
 
     * src/widgets/geda_menu_item.c: Reorganizing geda_menu_item_class_init;
       replocate properties before signals. Update existing property documentation
